# object_sim

./: .gitignore  __init__.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_package.py
