[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-sim"
version = "0.1.0"
description = "Object simulation XML and mesh assets for MyoSuite."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "myolab" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/myolab/object_sim"
Repository = "https://github.com/myolab/object_sim"

[tool.setuptools]
packages = ["object_sim"]
include-package-data = true

[tool.setuptools.package-dir]
object_sim = "."

[tool.setuptools.package-data]
object_sim = ["**/*"]
